<resources>
    <string name="apps">My Nanodegree Apps!</string>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="spotify">Spotify Streamer</string>
    <string name="scores">Football Scores App</string>
    <string name="library">Library App</string>
    <string name="bib">Build It Bigger</string>
    <string name="xyz">XYZ Reader</string>
    <string name="capstone">Capstone</string>
</resources>
